--- a/main.html
+++ b/main.html
@@ -8,7 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Item  Price    Quantity</h1>
+	<table>
+		<tr>      
+			<td>Item</td>
+			<td>Price</td>
+			<td>Quantity</td>
+		</tr>
+		<tr>      
+			<td>Banana</td>
+			<td>$1.00</td>
+			<td>3</td>
+		</tr>
+		<tr>      
+			<td>Burger</td>
+			<td>$6.90</td>
+			<td>1</td>
+		</tr>
+		<tr>      
+			<td>Cookie</td>
+			<td>$4.20</td>
+			<td>4</td>
+		</tr>
+		<tr>      
+			<td>Cookie</td>
+			<td>$12.10</td>
+			<td>8</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
