--- a/main.html
+++ b/main.html
@@ -9,31 +9,36 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table>
-		<th>      
-			<td>Item</td>
-			<td>Price</td>
-			<td>Quantity</td>
-		</th>
-		<tr>      
-			<td>Banana</td>
-			<td>$1.00</td>
-			<td>3</td>
-		</tr>
-		<tr>      
-			<td>Burger</td>
-			<td>$6.90</td>
-			<td>1</td>
-		</tr>
-		<tr>      
-			<td>Cookie</td>
-			<td>$4.20</td>
-			<td>4</td>
-		</tr>
-		<tr>      
-			<td>Cookie</td>
-			<td>$12.10</td>
-			<td>8</td>
-		</tr>
+		<thead>
+			<tr>      
+				<th>Item</th>
+				<th>Price</th>
+				<th>Quantity</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>      
+				<td>Banana</td>
+				<td>$1.00</td>
+				<td>3</td>
+			</tr>
+			<tr>      
+				<td>Burger</td>
+				<td>$6.90</td>
+				<td>1</td>
+			</tr>
+			<tr>      
+				<td>Cookie</td>
+				<td>$4.20</td>
+				<td>4</td>
+			</tr>
+			<tr>      
+				<td>Cookie</td>
+				<td>$12.10</td>
+				<td>8</td>
+			</tr>
+		</tbody>
+		
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
