--- a/main.html
+++ b/main.html
@@ -32,13 +32,15 @@
 				<td>$4.20</td>
 				<td>4</td>
 			</tr>
+			
+		</tbody>
+		<tfoot>
 			<tr>      
-				<td>Cookie</td>
+				<td>Total</td>
 				<td>$12.10</td>
 				<td>8</td>
 			</tr>
-		</tbody>
-		
+		</tfoot>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
