--- a/main.html
+++ b/main.html
@@ -18,17 +18,17 @@
 		</thead>
 		<tbody>
 			<tr>      
-				<td>Banana</td>
+				<th>Banana</th>
 				<td>$1.00</td>
 				<td>7</td>
 			</tr>
 			<tr>      
-				<td>Burger</td>
+				<th>Burger</th>
 				<td>$6.90</td>
 				<td>1</td>
 			</tr>
 			<tr>      
-				<td>Cookie</td>
+				<th>Cookie</th>
 				<td>$4.20</td>
 				<td>4</td>
 			</tr>
@@ -36,7 +36,7 @@
 		</tbody>
 		<tfoot>
 			<tr>      
-				<td>Total</td>
+				<th>Total</th>
 				<td>$12.10</td>
 				<td>8</td>
 			</tr>
